Fix cart controller, routes and validation.
